Fixes bugs in GoReply + More tests
bugs:
- GoReply.getMainInfoString threw NullPointerException if no extra info
is available
- GoReply.getInfoString threw NullPointerException instead of
IllegalArgumentException if no extra info is available
- GoReply does not return extra moves if no PV builder was defined

breaking changes:
- GoReply.setPVBuilder now has Function<UCIMove, List<UCIMove>> argument
instead of Function<UCIMove, Optional<List<UCIMove>>>

Other:
- Adds UCI.doQuit method